--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-map-gl": "^3.3.7",
     "react-md-spinner": "^0.3.0",
     "react-redux": "^5.1.0",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.0.2"
